# switchbot-temperature-api

./: .env.example  .gitignore  Cargo.toml  README.md  pm2.json
src/: api.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  poller.rs  stats.html  switchbot.rs
tests/: integration.rs
